# AudioAura

./: .gitignore  CMakeLists.txt  build.sh  main.c
include/: UI.h  playlist.h  ui.h
src/: UI.c  main.c  playlist.c  ui.c
